# image_processor

./: CMakeLists.txt  image_processor.cpp
source/bmp/: bmp_reader.cpp  bmp_reader.h  bmp_writer.cpp  bmp_writer.h
source/filters/: blur_filter.cpp  blur_filter.h  crop_filter.cpp  crop_filter.h  crystal_filter.cpp  crystal_filter.h  edge_filter.cpp  edge_filter.h  filter.h  filter_factory.cpp  filter_factory.h  filter_pipeline.cpp  filter_pipeline.h  flip_flop_filter.cpp  flip_horiz_filter.cpp  flip_horiz_filter.h  grayscale_filter.cpp  grayscale_filter.h  negative_filter.cpp  negative_filter.h  sharpen_filter.cpp  sharpen_filter.h
source/parser/: args_parser.cpp  args_parser.h
source/utilities/: clamp.h
